# plural-export

./: Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
core/: Cargo.toml
core/src/: export.rs  lib.rs
core/src/conversion/: mod.rs  tupperbox.rs
core/src/conversion/pluralkit/: mod.rs  v1.rs  v2.rs
core/src/models/: mod.rs
core/src/models/intermediary/: group.rs  member.rs  mod.rs  proxy_tag.rs
core/src/models/pluralkit/: mod.rs
core/src/models/pluralkit/v1/: mod.rs
core/src/models/pluralkit/v2/: mod.rs
core/src/models/pluralkit/v2/enums/: id_padding_format.rs  privacy.rs  proxy_switch_action.rs
core/src/models/pluralkit/v2/group/: mod.rs
core/src/models/pluralkit/v2/member/: mod.rs  proxy_tag.rs
core/src/models/pluralkit/v2/switch/: mod.rs
core/src/models/pluralkit/v2/system/: config.rs  privacy.rs
core/src/models/tupperbox/: group.rs
plural-export/: Cargo.toml
plural-export-macros/: Cargo.toml
plural-export-macros/src/: export_conversion.rs  lib.rs
plural-export-macros/src/utils/: mod.rs  option_to_tokens.rs  path.rs  string_to_pascal_case.rs
plural-export-web/: Cargo.toml  Dioxus.toml
plural-export-web/assets/: tailwind.css
plural-export-web/src/: main.rs
plural-export-web/src/api/: mod.rs
plural-export-web/src/app/: home.rs
plural-export-web/src/components/: theme.rs
plural-export-web/src/hooks/theme/: mod.rs
plural-export/src/: export.rs  lib.rs
plural-export/src/conversion/: mod.rs  tupperbox.rs
plural-export/src/conversion/pluralkit/: mod.rs  v1.rs  v2.rs
plural-export/src/models/: mod.rs
plural-export/src/models/intermediary/: group.rs  member.rs  mod.rs
plural-export/src/models/intermediary/enums/: image.rs
plural-export/src/models/pluralkit/: mod.rs
plural-export/src/models/pluralkit/v1/: mod.rs
plural-export/src/models/pluralkit/v2/: mod.rs
plural-export/src/models/pluralkit/v2/enums/: mod.rs
plural-export/src/models/pluralkit/v2/group/: mod.rs  privacy.rs
plural-export/src/models/pluralkit/v2/member/: mod.rs  privacy.rs
plural-export/src/models/pluralkit/v2/switch/: mod.rs
plural-export/src/models/pluralkit/v2/system/: mod.rs
plural-export/src/models/tupperbox/: mod.rs  tupper.rs
plural-export/src/utils/: id.rs  mod.rs  version.rs
web/: Cargo.toml  tailwind.css
web/assets/: theme.js
web/src/api/: mod.rs
web/src/app/: home.rs  mod.rs
web/src/components/: mod.rs
web/src/hooks/: mod.rs
