[workspace]
resolver = "3"
members = [
    "plural-export",
    "plural-export-macros",
    "plural-export-web"
]

[profile.release]
debug = false
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true

[workspace.dependencies]
plural-export = { path = "./plural-export" }
plural-export-macros = { path = "./plural-export-macros" }
plural-export-web = { path = "./plural-export-web" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
pedantic = "warn"

cast_lossless = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
pub_underscore_fields = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }

absolute_paths = { level = "warn", priority = 1 }
allow_attributes = { level = "warn", priority = 1 }
arbitrary_source_item_ordering = { level = "warn", priority = 1 }
branches_sharing_code = { level = "warn", priority = 1 }
collection_is_never_read = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
derive_partial_eq_without_eq = { level = "warn", priority = 1 }
empty_drop = { level = "warn", priority = 1 }
empty_enum_variants_with_brackets = { level = "warn", priority = 1 }
empty_structs_with_brackets = { level = "warn", priority = 1 }
equatable_if_let = { level = "warn", priority = 1 }
fallible_impl_from = { level = "warn", priority = 1 }
future_not_send = { level = "warn", priority = 1 }
if_then_some_else_none = { level = "warn", priority = 1 }
indexing_slicing = { level = "warn", priority = 1 }
infinite_loop = { level = "warn", priority = 1 }
integer_division = { level = "warn", priority = 1 }
literal_string_with_formatting_args = { level = "warn", priority = 1 }
min_ident_chars = { level = "warn", priority = 1 }
missing_const_for_fn = { level = "warn", priority = 1 }
option_if_let_else = { level = "warn", priority = 1 }
or_fun_call = { level = "warn", priority = 1 }
panic = { level = "warn", priority = 1 }
panic_in_result_fn = { level = "warn", priority = 1 }
precedence_bits = { level = "warn", priority = 1 }
redundant_clone = { level = "warn", priority = 1 }
redundant_type_annotations = { level = "warn", priority = 1 }
ref_patterns = { level = "warn", priority = 1 }
semicolon_inside_block = { level = "warn", priority = 1 }
set_contains_or_insert = { level = "warn", priority = 1 }
significant_drop_in_scrutinee = { level = "warn", priority = 1 }
significant_drop_tightening = { level = "warn", priority = 1 }
single_char_lifetime_names = { level = "warn", priority = 1 }
single_option_map = { level = "warn", priority = 1 }
str_to_string = { level = "warn", priority = 1 }
string_add = { level = "warn", priority = 1 }
string_lit_chars_any = { level = "warn", priority = 1 }
string_slice = { level = "warn", priority = 1 }
todo = { level = "warn", priority = 1 }
trait_duplication_in_bounds = { level = "warn", priority = 1 }
trivial_regex = { level = "warn", priority = 1 }
type_repetition_in_bounds = { level = "warn", priority = 1 }
unseparated_literal_suffix = { level = "warn", priority = 1 }
unwrap_in_result = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }
use_self = { level = "warn", priority = 1 }
useless_let_if_seq = { level = "warn", priority = 1 }

allow_attributes_without_reason = { level = "deny", priority = 1 }
