[package]
name = "plural-export-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro-crate = { version = "3.4" }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
